fix email service template bug